scraped articles (titles right now) will appear on the page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,6 +15,7 @@
 
     {{!-- Javascript for front end --}}
     <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="/assets/js/index.js"></script>
 
 </head>
 
