--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,29 +1,50 @@
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/">Scraper of News</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" id="home" href="/">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="scrape" href="/scrape">Scrape</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="saved" href="#">Saved Articles</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="delete" href="#">Delete Articles</a>
+            </li>
+        </ul>
+
+    </div>
+</nav>
+
 <div class="container">
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/">Scraper of News</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/scrape">Scrape</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Saved Articles</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Delete Articles</a>
-                </li>
-            </ul>
-
+    <div class="row">
+        <div class="jumbotron">
+            <h1 class="display-4">Hello, world!</h1>
+            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention
+                to
+                featured content or information.</p>
+            <hr class="my-4">
+            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
         </div>
-    </nav>
+    </div>
+
+    <div class="row">
+        <div class="article-holder">
+            {{#each articles}}
+            <p>{{this.title}}</p>
+            {{/each}}
+        </div>
+    </div>
+
 
 </div>
