Changed links to buttons. Removed unneeded delete nav item

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,13 +11,7 @@
                 <a class="nav-link" id="home" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" id="scrape" href="/scrape">Scrape</a>
-            </li>
-            <li class="nav-item">
                 <a class="nav-link" id="saved" href="/savedarticles">Saved Articles</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" id="delete" href="#">Delete Articles</a>
             </li>
         </ul>
 
@@ -52,9 +46,11 @@
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">{{this.title}}</h5>
-                                <a class="article-link" target=" _blank" href={{this.link}}>{{this.link}}</a>
+                                <a class="btn btn-success article-link" target=" _blank" href={{this.link}}>Go to
+                                    page</a>
                                 <br>
-                                <a class="btn btn-primary article-save">Save Article</a>
+                                <br>
+                                <button class="btn btn-primary article-save">Save Article</button>
                             </div>
                         </div>
                     </div>
