--- a/views/savedarticles.handlebars
+++ b/views/savedarticles.handlebars
@@ -27,7 +27,7 @@
         {{#each articles}}
         <div class="col-lg-6">
             <div class="article-holder text-center">
-                <div class="card mb-3" style="max-width: 540px;">
+                <div class="card mb-3" data-id={{this._id}} style="max-width: 540px;">
                     <div class="row no-gutters">
                         <div class="col-md-4">
                             <img src={{this.thumbnail}} class="card-img" alt="...">
@@ -53,3 +53,5 @@
 
 
 </div>
+
+<script src="/assets/js/savedarticles.js"></script>
