Notes save to the db as its own collection associated with the article

--- a/views/savedarticles.handlebars
+++ b/views/savedarticles.handlebars
@@ -39,7 +39,7 @@
                                     page</a>
                                 <br>
                                 <br>
-                                <button class="btn btn-info add-note">Add Note</button>
+                                <button class="btn btn-info add-note">Notes</button>
                                 <button class="btn btn-danger delete-article">Delete Article</button>
                             </div>
                         </div>
