--- a/views/savednotes.handlebars
+++ b/views/savednotes.handlebars
@@ -10,7 +10,7 @@
 
 
 <div class="container">
-    <input type="text" id="note">
+    <input type="text" class="note">
     <button class="btn btn-primary create-note" data-id={{articles._id}}>Add Note</button>
 
     <div class="row">
