added back button to notes page

--- a/views/savednotes.handlebars
+++ b/views/savednotes.handlebars
@@ -2,6 +2,7 @@
     <div class="container">
         <h1 class="display-4">Notes for: {{articles.title}}</h1>
         <p class="lead"></p>
+        <a href="/savedarticles" class="btn btn-primary">Back to saved articles</a>
     </div>
 </div>
 
